force-app/main/default/objects/Unit_Event_History__c/Unit_Event_History__c.object-meta.xml
<CustomObject>
    <label>Unit Event History</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Unit Event History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Event History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>