force-app/main/default/objects/Unit_Event_History__c/fields/Date_Unit__c.field-meta.xml
<CustomField>
    <fullName>Date_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Date Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Event History</relationshipLabel>
    <relationshipName>Unit_Event_History</relationshipName>
    <type>Lookup</type>
</CustomField>