force-app/main/default/objects/Unit_Event_History__c/fields/Effective_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_From_Date__c</fullName>
    <formula>Booking__r.Effective_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective From Date</label>
    <type>Date</type>
</CustomField>