force-app/main/default/objects/Unit_Event_History__c/fields/SalesRefundHeader__c.field-meta.xml
<CustomField>
    <fullName>SalesRefundHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesRefundHeader</label>
    <referenceTo>SalesRefundHeader__c</referenceTo>
    <relationshipLabel>Unit Event History</relationshipLabel>
    <relationshipName>Unit_Event_History</relationshipName>
    <type>Lookup</type>
</CustomField>